# back/docs/swagger.json
@@ -66,6 +66,11 @@
         },
         "/channels/all": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves the total views for different types of channels (YouTube, TikTok, Instagram, Facebook)",
                 "consumes": [
                     "application/json"
@@ -101,6 +106,11 @@
         },
         "/parsing/add": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Adds parsing information to the repository",
                 "consumes": [
                     "application/json"
@@ -147,6 +157,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves information about a user based on the provided username",
                 "consumes": [
                     "application/json"
@@ -197,6 +212,11 @@
         },
         "/users/all": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получение списка всех пользователей.",
                 "consumes": [
                     "application/json"
@@ -223,6 +243,11 @@
         },
         "/users/confirm": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Confirms the user's channel by username and channel URL",
                 "consumes": [
                     "application/json"
@@ -269,6 +294,11 @@
         },
         "/users/views": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves the list of channels and their views for a specific user based on the provided username",
                 "consumes": [
                     "application/json"
@@ -357,6 +387,11 @@
         },
         "/withdraw/cancel": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Confirms a withdrawal for a specific user based on the provided username",
                 "consumes": [
                     "application/json"
@@ -410,6 +445,11 @@
         },
         "/withdraw/confirm": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Confirms a withdrawal for a specific user based on the provided username",
                 "consumes": [
                     "application/json"
