# back/internal/api/controllers/CancelWithdraw.go
@@ -19,6 +19,7 @@ import (
 // @Failure 400 {object} map[string]string "Invalid username"
 // @Failure 500 {object} map[string]string "Internal server error"
 // @Router /withdraw/cancel [post]
+// @Security     BearerAuth
 func (h *Handler) CancelWithdraw(c echo.Context) error {
 	username := c.QueryParam("username")
 	id, err := user.GetIdFromUsername(username, h.repository)
