# back/internal/api/controllers/GetAllUsers.go
@@ -15,6 +15,7 @@ import (
 // @Produce      json
 // @Success      200    {object}  []model.UserInfo  "Список пользователей"
 // @Router       /users/all [get]
+// @Security     BearerAuth
 func (h *Handler) GetAllUsers(c echo.Context) error {
 	allnote := user.GetAll(h.repository)
 	return c.JSON(http.StatusOK, allnote)
